fix labels overflow

--- a/src/views/atoms/label/label.scss
+++ b/src/views/atoms/label/label.scss
@@ -14,6 +14,9 @@
   -ms-transition: all 0.2s;
   -o-transition: all 0.2s;
   transition: all 0.2s;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
   &.clickable {
     cursor: pointer;
