--- a/src/views/molecules/selected-filters-labels/selected-filters-labels.scss
+++ b/src/views/molecules/selected-filters-labels/selected-filters-labels.scss
@@ -10,6 +10,7 @@
   .selected-filters-labels {
     display: flex;
     flex-flow: row wrap;
+    width: 100%;
   }
 
   .flex-left {
